# mobile_manipulation

./: README.md
mobile_panda_controller_sim/: CMakeLists.txt  mobile_panda_plugin.xml  package.xml  setup.py
mobile_panda_controller_sim/config/: mobile_panda_controller_sim.yaml
mobile_panda_controller_sim/config/sim/: path_controller_sim.yaml  twist_controller_sim.yaml
mobile_panda_controller_sim/include/mobile_panda_controller_sim/: path_controller_sim.h  pseudo_inverse.h  twist_controller_sim.h  utils.h
mobile_panda_controller_sim/launch/: cmd_vel_mux.launch  mobile_panda_controller_sim.launch
mobile_panda_controller_sim/scripts/: cmd_vel_mux.py
mobile_panda_controller_sim/src/: path_controller_sim.cpp  twist_controller_sim.cpp  utils.cpp
mobile_panda_simulation/: CMakeLists.txt  package.xml
mobile_panda_simulation/config/: mobile_panda.rviz  mobile_panda_simulation.yaml
mobile_panda_simulation/launch/: mobile_panda_sim.launch
mobile_panda_simulation/src/: mobile_panda_simulation.cpp
mobile_panda_simulation/urdf/arm/: panda_arm_sim.xacro
mobile_panda_simulation/urdf/base/: mobile_platform.xacro  propertys.urdf.xacro
mobile_panda_simulation/urdf/hand/: hand_sim.xacro
mobile_panda_simulation/urdf/robot/: mobile_panda.urdf.xacro
