<?xml version="1.0"?>
<package format="2">
  <name>mobile_panda_controller_sim</name>
  <version>0.0.0</version>
  <description>The mobile_panda_controller_sim package</description>

  <maintainer email="philipp.mathea@web.de">philipp-mathea</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>realtime_tools</build_depend>
 
  <build_export_depend>std_msgs</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <!--depend>realtime_tools</depend-->
  <depend>roscpp</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>realtime_tools</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/mobile_panda_plugin.xml"/>
  </export>
</package>
